<resources>

    <string-array name="categories_array">
        <item>Emissions</item>
        <item>Energy</item>
        <item>Waste</item>
        <item>Water</item>
    </string-array>

    <string name="app_name">carbon_counter_front_end</string>
    <string name="login">Login</string>
    <string name="register">Create Account</string>
    <string name="view_my_stats">View My Stats</string>
    <string name="update_my_stats">Update My Stats</string>
    <string name="title_activity_create_user">CreateUser</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome !"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="your_name">Your Name</string>
    <string name="e_mail">email</string>
    <string name="password">password</string>
    <string name="re_type_password">re type password</string>
    <string name="view_tip_categories">View Tip Categories</string>
    <string name="all_categories">All Categories</string>
    <string name="recommended_categories">Recommended Categories</string>
    <string name="emissions">Emissions</string>
    <string name="waste">Waste</string>
    <string name="energy">Energy</string>
    <string name="water">Water</string>
    <string name="button">Tip Approval</string>
    <string name="title_activity_admin_tip_approval">AdminTipApprovalActivity</string>
    <string name="tab_text_1">Tab 1</string>
    <string name="tab_text_2">Tab 2</string>
    <string name="hello_world" />
    <string name="estimate_how_many_lbs_of_trash_you_ve_thrown_away_this_week">Estimate how many lbs of trash you\'ve thrown away this week:</string>
    <string name="RemoveUser">Remove User</string>
    <string name="AdminExplain">Please enter the user you wish to manage.</string>
    <string name="ChangeUsername">Change Username</string>
    <string name="InputUsername">Username</string>
    <string name="usernameHolder">"Username: "</string>
</resources>